--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,8 @@
 }
 
 .App-logo {
-  height: 40vmin;
+  align-items: left;
+  height: 4vmin;
   pointer-events: none;
 }
 
@@ -15,11 +16,9 @@
 
 .App-header {
   background-color: #282c34;
-  min-height: 100vh;
+  min-height: 8vh;
   display: flex;
-  flex-direction: column;
   align-items: center;
-  justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
 }
